# EndToEnd1

./: .gitignore  Dockerfile  README.md  application.py  main.py  pyproject.toml  requirements.txt  test_deployment.py  test_model_selection.py
.github/workflows/: azure-deploy.yml  main.yaml
BundleLogs-1751478152166/var/log/: cron  messages
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: EDA_Student_performance.ipynb  Model_training.ipynb
src/: exception.py  utlis.py
src/components/: data_ingestion.py  model_trainer.py
src/pipeline/: predict_pipeline.py
static/css/: style.css
templates/: home.html
