[project]
name = "EndToEndMLProject"
version = "0.1.0"
description = "This is my first End to end project in ml"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "endtoendmlproject",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
endtoendmlproject = { workspace = true }
